--- a/rottenMovies/src/main/resources/templates/movie.html
+++ b/rottenMovies/src/main/resources/templates/movie.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns:th="https://thymleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,9 @@
     <!-- place navbar here -->
   </header>
   <main>
-
+      <h1 th:text="${movie}"></h1>
+      <p th:text="${c_idx}"></p>
+      <p th:text="${page}"></p>
   </main>
   <footer>
     <!-- place footer here -->
