--- a/rottenMovies/src/main/resources/templates/exploreMovies.html
+++ b/rottenMovies/src/main/resources/templates/exploreMovies.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:th="https://thymleaf.org">
 <head>
@@ -41,20 +40,53 @@
 <body>
     <div class="album py-5 bg-light">
         <div class="container">
-            <nav aria-label="Page navigation example">
-                <ul class="pagination start-50">
-                    <li class="page-item"><a class="page-link" th:with="newPage=${page}-1" th:href="${page}&gt; 0? '?page='+${newPage} : '#'">Previous</a></li>
-                    <li class="page-item"><a class="page-link" href="#" th:text="${page}"></a></li>
-                    <li class="page-item"><a class="page-link" th:with="newPage=${page}+1" th:href="'?page='+${newPage}">Next</a></li>
-                </ul>
-            </nav>
+            <form>
+                <div class = "row g-3">
+                    <!--div class="column form-floating mb-3">
+                        <input class="form-control" type="text" name="title" id="title" placeholder="title" ${title}">
+                        <label for="title">Title</label>
+                    </div>
+                    <div class = "column">
+                        <div class="column form-floating mb-3">
+                            <input class="form-control" type="number" name="title" id="startYear" placeholder="startYear" ${startYear}">
+                            <label for="startYear">Start Year Range</label>
+                        </div>
+                        <div class=""column mb-3>
+                            <input class="form-control" type="number" name="title" id="endYear" placeholder="endYear" ${endYear}">
+                            <label for="endYear">End Year Range</label>
+                        </div>
+                    </div-->
+                    <div class="col input-group">
+                        <input class="form-control" id="title" type="text" placeholder="Title" name="title" th:value="${title}?:''" aria-describedby="search-addon">
+                        <button class="btn btn-outline-secondary" id="search-addon" type="submit">Search</button>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label for="startYear">Start Year Range</label>
+                        <input class="form-control" id="startYear" type="number" name="startYear" placeholder="1980" th:value="${startYear}?:''">
+                    </div>
+                    <div class="col">
+                        <label for="endYear">End Year Range</label>
+                        <input class="form-control" id="endYear" type="number" name="endYear" placeholder="2020" th:value="${endYear}?:''">
+                    </div>
+                </div>
+                    <ul class="pagination text-align justify-content-center my-2">
+                        <li class="page-item"><button type="submit" name="page" class="page-link" th:with="newPage=(${page}?:0)-1" th:value="${newPage}&gt;0?${newPage}:0">Previous</button></li>
+                        <li class="page-item"><button type="submit" name="page" class="page-link" th:value="${page}?:0" th:text="${page}?:0" ></button></li>
+                        <li class="page-item"><button type="submit" name="page" class="page-link" th:with="newPage=(${page}?:0)+1" th:value="${newPage}">Next</button></li>
+                    </ul>
+            </form>
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col" th:each="movie: ${movieList}">
               <div class="card shadow-sm">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 <div class="card-body">
-                  <h5 class="card-title" th:text="${movie.primaryTitle}"></h5>
-                  <p class="card-text" th:text="${movie.criticConsensus}"></p>
+                  <a class="card-title" th:text="${movie.primaryTitle}" th:href="'/movie/'+${movie.id}">sdf</a>
+                  <p class="card-text" th:text="${movie.year}"></p>
+                    <div >
+                        <span class="badge rounded-pill text-bg-primary mb-3 mx-1" th:text="${g}"  th:each="g: ${movie.genres}"></span>
+                    </div>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                       <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
