--- a/rottenMovies/src/main/resources/templates/exploreMovies.html
+++ b/rottenMovies/src/main/resources/templates/exploreMovies.html
@@ -71,11 +71,33 @@
                         <input class="form-control" id="endYear" type="number" name="endYear" placeholder="2020" th:value="${endYear}?:''">
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col">
+                        <label for="workers">Personnel</label>
+                        <input class="form-control" id="workers" type="text" placeholder="Leonardo DiCaprio, Jonny Depp" name="workers" th:value="${workers}?:''">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" role="switch" id="includeAllWorkers" name="includeAllWorkers" th:checked="${includeAllWorkers}=='on'">
+                            <label class="form-check-label" for="includeAllWorkers">Must include all names (separate by comma ',')</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <label for="workers">Genres</label>
+                        <input class="form-control" id="genres" type="text" placeholder="Adventure, Sci-Fi" name="genres" th:value="${genres}?:''">
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" role="switch" id="includeAllGenres" name="includeAllGenres" th:checked="${includeAllGenres}=='on'">
+                            <label class="form-check-label" for="includeAllGenres">Must include all genres (separate by comma ',')</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
                     <ul class="pagination text-align justify-content-center my-2">
                         <li class="page-item"><button type="submit" name="page" class="page-link" th:with="newPage=(${page}?:0)-1" th:value="${newPage}&gt;0?${newPage}:0">Previous</button></li>
                         <li class="page-item"><button type="submit" name="page" class="page-link" th:value="${page}?:0" th:text="${page}?:0" ></button></li>
                         <li class="page-item"><button type="submit" name="page" class="page-link" th:with="newPage=(${page}?:0)+1" th:value="${newPage}">Next</button></li>
                     </ul>
+                </div>
             </form>
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col" th:each="movie: ${movieList}">
@@ -86,6 +108,9 @@
                   <p class="card-text" th:text="${movie.year}"></p>
                     <div >
                         <span class="badge rounded-pill text-bg-primary mb-3 mx-1" th:text="${g}"  th:each="g: ${movie.genres}"></span>
+                    </div>
+                    <div>
+                        <span class="badge rounded-pill mb-3 mx-1" th:text="${w.primaryName}"  th:classappend="${w.category}=='actor'?'text-bg-success':'text-bg-secondary'" th:each="w: ${movie.personnel}"></span>
                     </div>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
