--- a/rottenMovies/src/main/resources/templates/exploreMovies.html
+++ b/rottenMovies/src/main/resources/templates/exploreMovies.html
@@ -104,13 +104,14 @@
               <div class="card shadow-sm">
                 <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
                 <div class="card-body">
-                  <a class="card-title" th:text="${movie.primaryTitle}" th:href="'/movie/'+${movie.id}">sdf</a>
-                  <p class="card-text" th:text="${movie.year}"></p>
+                  <a class="card-title text-decoration-none h5" th:text="${movie.primaryTitle}" th:href="'/movie/'+${movie.id}">sdf</a>
+                  <p class="card-text" th:text="${movie.year} + ' (' + ${movie.productionCompany} + ')'"></p>
                     <div >
-                        <span class="badge rounded-pill text-bg-primary mb-3 mx-1" th:text="${g}"  th:each="g: ${movie.genres}"></span>
+                        <a class="badge rounded-pill text-bg-primary mb-3 mx-1 text-decoration-none" th:href="'/movie?genres='+${g}" th:text="${g}"  th:each="g: ${movie.genres}"></a>
                     </div>
                     <div>
-                        <span class="badge rounded-pill mb-3 mx-1" th:text="${w.primaryName}"  th:classappend="${w.category}=='actor'?'text-bg-success':'text-bg-secondary'" th:each="w: ${movie.personnel}"></span>
+                        <a class="badge rounded-pill mb-3 mx-1 text-decoration-none" th:href="'/movie?workers='+${w.primaryName}" th:text="${w.primaryName}" th:classappend="${w.category}=='actor'?'text-bg-success':'text-bg-secondary'" th:each="w: ${movie.personnel}">
+                        </a>
                     </div>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
