--- a/rottenMovies/src/main/resources/templates/movie.html
+++ b/rottenMovies/src/main/resources/templates/movie.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </div>
-    <div class="navbar navbar-dark bg-dark shadow-sm py-5">
+    <div class="navbar navbar-dark bg-dark shadow-sm">
         <div class="container">
             <a href="/" class="navbar-brand d-flex align-items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
@@ -41,13 +41,53 @@
 </header>
   <main>
       <div class="container">
-          <div class="card shadow">
-          <h1 th:text="${movie}">Titolo</h1>
-          <p th:text="${c_idx}"></p>
-          <p th:text="${page}"></p>
-          </div>
-          <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <div class="p-5 mb-4 bg-light rounded-3 shadow">
+              <div class="container-fluid py-5">
+                  <h1 class="display-5 fw-bold" th:text="${movie.primaryTitle}">Titolo</h1>
+                  <div class="row">
+                      <div class="col-md-8 fs-4" th:text="|${movie.year}, ${movie.runtimeMinutes} min, ${movie.productionCompany}|">1989, 120 min, Warner Bros</div>
+                      <div>
+                          <a class="badge rounded-pill text-bg-primary mb-3 mx-1 text-decoration-none" th:href="'/movie?genres='+${g}" th:text="${g}"  th:each="g: ${movie.genres}">Adventure</a>
+                      </div>
+                      <div class="row">
+                          <div>with:</div>
+                          <ul class="col-md-4 fs-6 mx-3" th:each="w:${movie.personnel}">
+<!--                              <li th:text="|${w.primaryName} | + (${w.category}=='actor' || ${w.category}=='actress')?|as ${w.characters}|:|(${w.job})|">Spielberg (director)</li>-->
+                          </ul>
+                          <div class="d-flex justify-content-between align-items-center pb-3">
+                              <div class="col">
+                                  <div>User Rating: Rotten</div>
+<!--                                  <div th:text="|${movie.user_status} (${movie.user_rating}%) (+${movie.user_fresh_count}/-${movie.user_rotten_count})|">XX%(+X/-X)</div>-->
+                              </div>
+                              <div class="col text-end">
+                                  <div>Top Critic Rating: Fresh</div>
+<!--                                  <div th:text="|${movie.top_critic_status} (${movie.top_critic_rating}%) (+${movie.top_critic_fresh_count}/-${movie.top_critic_rotten_count})|">XX%(+X/-X)</div>-->
+                              </div>
+                          </div>
+                      </div>
+                  </div>
 
+
+              </div>
+          </div>
+          <div class="h3 text-center">Reviews:</div>
+          <form>
+              <div class="row">
+                  <ul class="pagination text-align justify-content-center my-3">
+                      <li class="page-item"><button type="submit" name="page" class="page-link" th:with="newPage=(${page}?:0)-1" th:value="${newPage}&gt;0?${newPage}:0">Previous</button></li>
+                      <li class="page-item"><button type="submit" name="page" class="page-link" th:value="${page}?:0" th:text="${page}?:0" >0</button></li>
+                      <li class="page-item"><button type="submit" name="page" class="page-link" th:with="newPage=(${page}?:0)+1" th:value="${newPage}">Next</button></li>
+                  </ul>
+              </div>
+
+          </form>
+          <div th:each="review:${movie.reviews}">
+              <div class="col-1 mx-4" th:text="${review.criticName}">autore</div>
+              <div class="p- mb-4 bg-light rounded-3 shadow">
+                  <div class="row align-item-between py-2">
+                      <div class="col mx-4" th:text="|“${review.reviewContent}”|">contenuto lungo contenuto lungo contenuto lungocontenuto lungo contenuto lungo</div>
+                  </div>
+              </div>
           </div>
       </div>
   </main>
