add review listing functionality in movie page

--- a/rottenMovies/src/main/resources/templates/exploreMovies.html
+++ b/rottenMovies/src/main/resources/templates/exploreMovies.html
@@ -127,8 +127,8 @@
                         </a>
                     </div>
                     <div class="d-flex justify-content-between align-items-center pb-3">
-                        <div th:text="|${movie.user_status} (${movie.user_rating}%) (+${movie.user_fresh_count}/-${movie.user_rotten_count})|"></div>
-                        <div th:text="|${movie.top_critic_status} (${movie.top_critic_rating}%) (+${movie.top_critic_fresh_count}/-${movie.top_critic_rotten_count})|"></div>
+                        <div th:text="|${movie.user_status} (${movie.user_rating}%)|"></div>
+                        <div th:text="|${movie.top_critic_status} (${movie.top_critic_rating}%)|"></div>
                     </div>
                   <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
