--- a/rottenMovies/src/main/resources/templates/login.html
+++ b/rottenMovies/src/main/resources/templates/login.html
@@ -9,27 +9,32 @@
 </head>
 <body class="text-center">
     <main class="form-signin w-100 m-auto">
-        <form data-bitwarden-watching="1">
+        <form method="post">
         <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+        <h1 class="h3 mb-3 fw-normal">Please login</h1>
     
         <div class="form-floating">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Email address</label>
+            <input type="text" class="form-control" id="floatingInput" placeholder="Your_username" name="username">
+            <label for="floatingInput">Username</label>
         </div>
         <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
             <label for="floatingPassword">Password</label>
         </div>
     
-        <div class="checkbox mb-3">
-            <label>
-            <input type="checkbox" value="remember-me"> Remember me
-            </label>
-        </div>
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+<!--        <div class="checkbox mb-3">-->
+<!--            <label>-->
+<!--            <input type="checkbox" value="remember-me"> Remember me-->
+<!--            </label>-->
+<!--        </div>-->
+        <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+        <a href="/register">Don't have an account? Register</a>
         <p class="mt-5 mb-3 text-muted">© 2017–2022</p>
         </form>
+        <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
+            A simple danger alert—check it out!
+        </div>
+        <p th:text="${error}"></p>
     </main>
 </body>
 </html>
