--- a/rottenMovies/src/main/resources/templates/register.html
+++ b/rottenMovies/src/main/resources/templates/register.html
@@ -32,6 +32,7 @@
             </label>
         </div>
         <button class="w-100 btn btn-lg btn-primary" type="submit">Register</button>
+        <a href="/login">Already a User? Login</a>
         <p class="mt-5 mb-3 text-muted">© 2017–2022</p>
         </form>
     </main>
