--- a/rottenMovies/src/main/resources/templates/register.html
+++ b/rottenMovies/src/main/resources/templates/register.html
@@ -9,7 +9,7 @@
 </head>
 <body class="text-center">
     <main class="form-signin w-100 m-auto">
-        <form data-bitwarden-watching="1">
+        <form data-bitwarden-watching="1" method="post">
         <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
         <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
 
