--- a/rottenMovies/src/main/resources/templates/exploreMovies.html
+++ b/rottenMovies/src/main/resources/templates/exploreMovies.html
@@ -142,7 +142,17 @@
             </div>
           </div>
         </div>
-      </div>
+        <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
+            A simple danger alert—check it out!
+        </div>
+        <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
+            A simple info alert—check it out!
+        </div>
+        <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
+            A simple success alert—check it out!
+        </div>
+
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
     </script>
