--- a/rottenMovies/src/main/resources/templates/login.html
+++ b/rottenMovies/src/main/resources/templates/login.html
@@ -6,8 +6,10 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/signin.css">
+    <script>function changeLocation(){}</script>
 </head>
 <body class="text-center">
+    <script th:if="${credentials}">window.location.assign("/movie");</script>
     <main class="form-signin w-100 m-auto">
         <form method="post">
         <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
@@ -33,6 +35,12 @@
         </form>
         <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
             A simple danger alert—check it out!
+        </div>
+        <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
+            A simple info alert—check it out!
+        </div>
+        <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
+            A simple success alert—check it out!
         </div>
     </main>
 </body>
