--- a/rottenMovies/src/main/resources/templates/user.html
+++ b/rottenMovies/src/main/resources/templates/user.html
@@ -62,15 +62,22 @@
                             <a th:case="*" th:text="'Normal User'">Adventure</a>
                         </div>
                         <div th:if="${credentials}">
-                            <form method="post" th:if="${credentials.id!=user.id}">
-                                <button type="submit" class="button" name="follow" th:value="${credentials.id}">Follow</button>
-                                <button type="submit" class="button" name="unfollow" th:value="${credentials.id}">Unfollow</button>
-                            </form>
-                            <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
-                                A simple info alert—check it out!
+                            <div th:if="${!(credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO')}">
+                                <form method="post" th:if="${credentials.id!=user.id}">
+                                    <button type="submit" class="button" name="follow" th:value="${credentials.id}">Follow</button>
+                                    <button type="submit" class="button" name="unfollow" th:value="${credentials.id}">Unfollow</button>
+                                </form>
+                                <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
+                                    A simple info alert—check it out!
+                                </div>
+                                <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
+                                    A simple success alert—check it out!
+                                </div>
                             </div>
-                            <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
-                                A simple success alert—check it out!
+                            <div th:if="${(credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO')}">
+                                <form method="post">
+                                    <button type="submit" class="btn btn-danger" name="ban" >BAN</button>
+                                </form>
                             </div>
                         </div>
                     </div>
