register functionality and login bug fixes

--- a/rottenMovies/src/main/resources/static/css/signin.css
+++ b/rottenMovies/src/main/resources/static/css/signin.css
@@ -1,9 +1,9 @@
 html,
-body {
+content {
   height: 100%;
 }
 
-body {
+content {
   display: flex;
   align-items: center;
   padding-top: 40px;
@@ -18,16 +18,4 @@ body {
 
 .form-signin .form-floating:focus-within {
   z-index: 2;
-}
-
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
 }
