--- a/rottenMovies/src/main/resources/templates/exploreMovies.html
+++ b/rottenMovies/src/main/resources/templates/exploreMovies.html
@@ -17,9 +17,10 @@
           <div class="col-sm-4 offset-md-1 py-4">
             <h4 class="text-white">Links</h4>
             <ul class="list-unstyled">
-              <li><a href="#" class="text-white">Login</a></li>
-              <li><a href="#" class="text-white">Home</a></li>
-              <li><a href="#" class="text-white">About</a></li>
+              <li><a href="/login" class="text-white">Login</a></li>
+              <li><a href="/" class="text-white">Home</a></li>
+                <li th:if="${credentials}" th:text="|Hi ${credentials.username}|"></li>
+              <li><a href="/logout" class="text-white">Logout</a></li>
             </ul>
           </div>
         </div>
