--- a/rottenMovies/src/main/resources/templates/login.html
+++ b/rottenMovies/src/main/resources/templates/login.html
@@ -8,40 +8,82 @@
     <link rel="stylesheet" href="css/signin.css">
     <script>function changeLocation(){}</script>
 </head>
-<body class="text-center">
+<body>
+<header>
+    <div class="collapse bg-dark" id="navbarHeader">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8 col-md-7 py-4">
+                    <h4 class="text-white">Explore</h4>
+                    <p class="text-muted">Explore our vast catalogue of movies and leave a review</p>
+                </div>
+                <div class="col-sm-4 offset-md-1 py-4">
+                    <h4 class="text-white">Links</h4>
+                    <ul class="list-unstyled">
+                        <li><a href="/login" class="text-white">Login</a></li>
+                        <li><a href="/" class="text-white">Home</a></li>
+                        <li th:if="${credentials}" th:text="|Hi ${credentials.username}|"></li>
+                        <li><a href="/logout" class="text-white">Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="navbar navbar-dark bg-dark shadow-sm">
+        <div class="container">
+            <a href="/" class="navbar-brand d-flex align-items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2" viewBox="0 0 24 24"><path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path><circle cx="12" cy="13" r="4"></circle></svg>
+                <strong>rotten Movies</strong>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+        </div>
+    </div>
+</header>
+    <div  class="text-center">
     <script th:if="${credentials}">window.location.assign("/movie");</script>
-    <main class="form-signin w-100 m-auto">
-        <form method="post">
-        <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
-        <h1 class="h3 mb-3 fw-normal">Please login</h1>
-    
-        <div class="form-floating">
-            <input type="text" class="form-control" id="floatingInput" placeholder="Your_username" name="username">
-            <label for="floatingInput">Username</label>
-        </div>
-        <div class="form-floating">
-            <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
-            <label for="floatingPassword">Password</label>
-        </div>
-    
-<!--        <div class="checkbox mb-3">-->
-<!--            <label>-->
-<!--            <input type="checkbox" value="remember-me"> Remember me-->
-<!--            </label>-->
-<!--        </div>-->
-        <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
-        <a href="/register">Don't have an account? Register</a>
-        <p class="mt-5 mb-3 text-muted">© 2017–2022</p>
-        </form>
-        <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
-            A simple danger alert—check it out!
-        </div>
-        <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
-            A simple info alert—check it out!
-        </div>
-        <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
-            A simple success alert—check it out!
-        </div>
-    </main>
+        <main class="form-signin w-100 m-auto">
+            <form method="post">
+            <img class="mb-4" src="/docs/5.2/assets/brand/bootstrap-logo.svg" alt="" width="72" height="57">
+            <h1 class="h3 mb-3 fw-normal">Please login</h1>
+
+            <div class="form-floating">
+                <input type="text" class="form-control" id="floatingInput" placeholder="Your_username" name="username">
+                <label for="floatingInput">Username</label>
+            </div>
+            <div class="form-floating">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" name="password">
+                <label for="floatingPassword">Password</label>
+            </div>
+
+    <!--        <div class="checkbox mb-3">-->
+    <!--            <label>-->
+    <!--            <input type="checkbox" value="remember-me"> Remember me-->
+    <!--            </label>-->
+    <!--        </div>-->
+            <button class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+            <a href="/register">Don't have an account? Register</a>
+            <p class="mt-5 mb-3 text-muted">© 2017–2022</p>
+            </form>
+            <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
+                A simple danger alert—check it out!
+            </div>
+            <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
+                A simple info alert—check it out!
+            </div>
+            <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
+                A simple success alert—check it out!
+            </div>
+        </main>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+            integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous">
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js"
+            integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
+    </script>
+
 </body>
 </html>
