--- a/rottenMovies/src/main/resources/templates/exploreMovies.html
+++ b/rottenMovies/src/main/resources/templates/exploreMovies.html
@@ -115,8 +115,8 @@
           <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
             <div class="col" th:each="movie: ${movieList}">
               <div class="card shadow-sm">
-                <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em"></text></svg>
-                <div class="card-body">
+                <img class="bd-placeholder-img card-img-top" th:src="${movie.posterUrl}" width="100%" height="350" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title></img>
+                  <div class="card-body">
                   <a class="card-title text-decoration-none h5" th:text="${movie.primaryTitle}" th:href="'/movie/'+${movie.id}">sdf</a>
                   <p class="card-text" th:text="${movie.year} + ' (' + ${movie.productionCompany} + ')'"></p>
                     <div>
