--- a/rottenMovies/src/main/resources/templates/user.html
+++ b/rottenMovies/src/main/resources/templates/user.html
@@ -77,6 +77,7 @@
                             <div th:if="${(credentials.class.name == 'it.unipi.dii.lsmsdb.rottenMovies.DTO.AdminDTO')}">
                                 <form method="post">
                                     <button type="submit" class="btn btn-danger" name="ban" >BAN</button>
+                                    <button type="submit" class="btn btn-danger" name="unban" >UNBAN</button>
                                 </form>
                             </div>
                         </div>
