--- a/rottenMovies/src/main/resources/templates/login.html
+++ b/rottenMovies/src/main/resources/templates/login.html
@@ -6,7 +6,6 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="css/signin.css">
-    <script>function changeLocation(){}</script>
 </head>
 <body>
 <header>
@@ -22,7 +21,7 @@
                     <ul class="list-unstyled">
                         <li><a href="/login" class="text-white">Login</a></li>
                         <li><a href="/" class="text-white">Home</a></li>
-                        <li th:if="${credentials}" th:text="|Hi ${credentials.username}|"></li>
+                        <li th:if="${credentials}"><a th:text="|Hi ${credentials.username}|"></a></li>
                         <li><a href="/logout" class="text-white">Logout</a></li>
                     </ul>
                 </div>
@@ -49,7 +48,7 @@
             <h1 class="h3 mb-3 fw-normal">Please login</h1>
 
             <div class="form-floating">
-                <input type="text" class="form-control" id="floatingInput" placeholder="Your_username" name="username">
+                <input type="text" class="form-control" id="floatingInput" placeholder="Your_username" name="username" autofocus>
                 <label for="floatingInput">Username</label>
             </div>
             <div class="form-floating">
