--- a/rottenMovies/src/main/resources/templates/login.html
+++ b/rottenMovies/src/main/resources/templates/login.html
@@ -53,7 +53,7 @@
       <h1 class="h3 mb-3 fw-normal">Please login</h1>
 
       <div class="form-floating">
-        <input type="text" class="form-control" id="floatingInput" placeholder="Your_username" name="username">
+        <input type="text" class="form-control" id="floatingInput" placeholder="Your_username" name="username" autofocus>
         <label for="floatingInput">Username</label>
       </div>
       <div class="form-floating">
