--- a/rottenMovies/src/main/resources/templates/login.html
+++ b/rottenMovies/src/main/resources/templates/login.html
@@ -71,15 +71,7 @@
       <a href="/register">Don't have an account? Register</a>
       <p class="mt-5 mb-3 text-muted">© 2017–2022</p>
     </form>
-    <div class="alert alert-danger" role="alert" th:if="${error}" th:text="${error}">
-      A simple danger alert—check it out!
-    </div>
-    <div class="alert alert-info" role="alert" th:if="${info}" th:text="${info}">
-      A simple info alert—check it out!
-    </div>
-    <div class="alert alert-success" role="alert" th:if="${success}" th:text="${success}">
-      A simple success alert—check it out!
-    </div>
+    <div th:replace="infoBox :: html_infoBox">
   </main>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
