--- a/rottenMovies/src/main/resources/templates/admin-panel.html
+++ b/rottenMovies/src/main/resources/templates/admin-panel.html
@@ -133,6 +133,7 @@
               </table>
             </div>
             <div th:replace="infoBox :: html_infoBox">
+            </div>
           </main>
         </div>
       </div>
