--- a/rottenMovies/src/main/resources/templates/movie.html
+++ b/rottenMovies/src/main/resources/templates/movie.html
@@ -26,6 +26,7 @@
   <main>
       <div class="container">
           <div th:replace="infoBox :: html_infoBox">
+          </div>
           <div class="p-5 mb-4 bg-light rounded-3 shadow">
               <div class="container-fluid py-5">
 
@@ -154,6 +155,7 @@
                   </div>
               </div>
           </div>
+
       </div>
   </main>
   <footer>
